--- a/ATS_AVR/ATS_AVR.vcxproj
+++ b/ATS_AVR/ATS_AVR.vcxproj
@@ -77,10 +77,10 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\ATS_AVR;C:\Users\kobel\Documents\Arduino\libraries\LiquidCrystal_I2C_V112;$(ProjectDir)..\..\..\Arduino_IDE\hardware\arduino\avr\libraries\Wire\src;C:\Users\kobel\Documents\Arduino\libraries\DS3231-1.1.0;$(ProjectDir)..\..\..\Arduino_IDE\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\..\Arduino_IDE\hardware\arduino\avr\variants\eightanaloginputs;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\\lib\gcc\avr\7.3.0\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\avr\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\\lib\gcc\avr\7.3.0\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\avr\include-fixed;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\avr\include\avr;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>$(ProjectDir)__vm\.ATS_AVR.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>true</IgnoreStandardIncludePath>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__AVR_atmega328p__;__AVR_ATmega328P__;__AVR_ATmega328p__;_VMDEBUG=1;F_CPU=16000000L;ARDUINO=108013;ARDUINO_AVR_NANO;ARDUINO_ARCH_AVR;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -115,7 +115,20 @@
     <None Include="src\arduino folders read me.txt">
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AbstractEnergyState.h" />
+    <ClInclude Include="__vm\.ATS_AVR.vsarduino.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="AbstractEnergyState.cpp" />
+    <ClCompile Include="Source.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties arduino.upload.port="COM3" config.Debug.customdebug_nano_atmega328old_debugger_type="universal" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
