--- a/ATS_AVR/ATS_AVR.vcxproj
+++ b/ATS_AVR/ATS_AVR.vcxproj
@@ -77,7 +77,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\ATS_AVR;C:\Users\kobel\Documents\Arduino\libraries\LiquidCrystal_I2C_V112;$(ProjectDir)..\..\..\Arduino_IDE\hardware\arduino\avr\libraries\Wire\src;C:\Users\kobel\Documents\Arduino\libraries\DS3231-1.1.0;$(ProjectDir)..\..\..\Arduino_IDE\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\..\Arduino_IDE\hardware\arduino\avr\variants\eightanaloginputs;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\\lib\gcc\avr\7.3.0\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\avr\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\\lib\gcc\avr\7.3.0\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\avr\include-fixed;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\avr\include\avr;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\ATS_AVR;C:\Users\kobel\Documents\Arduino\libraries\Adafruit_MCP23008_library-2.1.0;$(ProjectDir)..\..\..\Arduino_IDE\libraries\Adafruit_BusIO;$(ProjectDir)..\..\..\Arduino_IDE\hardware\arduino\avr\libraries\Wire\src;$(ProjectDir)..\..\..\Arduino_IDE\hardware\arduino\avr\libraries\SPI\src;C:\Users\kobel\Documents\Arduino\libraries\LiquidCrystal_I2C_V112;C:\Users\kobel\Documents\Arduino\libraries\DS3231-1.1.0;$(ProjectDir)..\..\..\Arduino_IDE\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\..\Arduino_IDE\hardware\arduino\avr\variants\eightanaloginputs;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\\lib\gcc\avr\7.3.0\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\avr\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\\lib\gcc\avr\7.3.0\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\avr\include-fixed;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\avr\include\avr;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\Arduino_IDE\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>$(ProjectDir)__vm\.ATS_AVR.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>true</IgnoreStandardIncludePath>
       <PreprocessorDefinitions>__AVR_atmega328p__;__AVR_ATmega328P__;__AVR_ATmega328p__;_VMDEBUG=1;F_CPU=16000000L;ARDUINO=108013;ARDUINO_AVR_NANO;ARDUINO_ARCH_AVR;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -116,12 +116,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AbstractEnergyState.h" />
+    <ClInclude Include="EnergyState.h" />
     <ClInclude Include="Plot.h" />
+    <ClInclude Include="Source.h" />
     <ClInclude Include="__vm\.ATS_AVR.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AbstractEnergyState.cpp" />
+    <ClCompile Include="EnergyState.cpp" />
     <ClCompile Include="Plot.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
